Add -XX:+PrintGCApplicationStoppedTime analysis.